// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskErrorAsset /> should render properly when asset has no proxies 1`] = `
.emotion-0 {
  font-family: Roboto Mono;
  padding-bottom: 32px;
  height: auto;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4a4a4a;
  padding: 16px;
}

.emotion-2 {
  color: #808080;
  border: 1px solid #808080;
}

.emotion-3 {
  padding-left: 24px;
}

.emotion-4 {
  background-color: #191919;
}

.emotion-4 pre {
  padding: 16px;
  margin: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        data-file-name="fallback.svg"
        height={48}
      />
    </div>
    <div
      className="emotion-3"
    >
      TIFF_1MB.tiff
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre class=\\"__json-pretty__\\" style=\\"margin:0;line-height:1.3;overflow:auto;\\">{
  \\"<span class=\\"__json-key__\\">id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C\\"</span>,
  \\"<span class=\\"__json-key__\\">metadata</span>\\": {
    \\"<span class=\\"__json-key__\\">system</span>\\": {
      \\"<span class=\\"__json-key__\\">jobId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"106d4be1-5d95-11ea-baea-364023b135f5\\"</span>,
      \\"<span class=\\"__json-key__\\">dataSourceId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"10509c20-5d95-11ea-baea-364023b135f5\\"</span>,
      \\"<span class=\\"__json-key__\\">timeCreated</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:24.922700Z\\"</span>,
      \\"<span class=\\"__json-key__\\">state</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"Analyzed\\"</span>,
      \\"<span class=\\"__json-key__\\">projectId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"89382033-bcbb-4c8f-81a9-3d0883298a81\\"</span>,
      \\"<span class=\\"__json-key__\\">taskId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"106e0f32-5d95-11ea-baea-364023b135f5\\"</span>,
      \\"<span class=\\"__json-key__\\">timeModified</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:47.575195Z\\"</span>
    },
    \\"<span class=\\"__json-key__\\">custom</span>\\": {
      \\"<span class=\\"__json-key__\\">numbers</span>\\": [
        <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
        <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">2</span>,
        <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">3</span>
      ]
    },
    \\"<span class=\\"__json-key__\\">source</span>\\": {
      \\"<span class=\\"__json-key__\\">path</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"gs://zorroa-dev-data/image/TIFF_1MB.tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">extension</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">filename</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"TIFF_1MB.tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">mimetype</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image/tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">filesize</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1131930</span>,
      \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1867533868</span>,
      \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/source/TIFF_1MB.tiff\\"</span>
    },
    \\"<span class=\\"__json-key__\\">metrics</span>\\": {
      \\"<span class=\\"__json-key__\\">pipeline</span>\\": [
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.core.processors.PreCacheSourceFileProcessor\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1621235190</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0.11</span>,
          \\"<span class=\\"__json-key__\\">executionDate</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:27.694149\\"</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.image.importers.ImageImporter\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1426657387</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0.26</span>,
          \\"<span class=\\"__json-key__\\">executionDate</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:28.215069\\"</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.office.importers.OfficeImporter\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">2001473853</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.video.VideoImporter\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">3310423168</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.core.processors.AssertAttributesProcessor\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1841569083</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0</span>,
          \\"<span class=\\"__json-key__\\">executionDate</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:29.654215\\"</span>
        }
      ]
    },
    \\"<span class=\\"__json-key__\\">media</span>\\": {
      \\"<span class=\\"__json-key__\\">width</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">650</span>,
      \\"<span class=\\"__json-key__\\">height</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">434</span>,
      \\"<span class=\\"__json-key__\\">aspect</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1.5</span>,
      \\"<span class=\\"__json-key__\\">orientation</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"landscape\\"</span>,
      \\"<span class=\\"__json-key__\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image\\"</span>,
      \\"<span class=\\"__json-key__\\">length</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>
    },
    \\"<span class=\\"__json-key__\\">clip</span>\\": {
      \\"<span class=\\"__json-key__\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"page\\"</span>,
      \\"<span class=\\"__json-key__\\">start</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
      \\"<span class=\\"__json-key__\\">stop</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
      \\"<span class=\\"__json-key__\\">length</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
      \\"<span class=\\"__json-key__\\">pile</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"pUn6wBxUN7x9JxOxLkvruOyNdYA\\"</span>,
      \\"<span class=\\"__json-key__\\">sourceAssetId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C\\"</span>
    },
    \\"<span class=\\"__json-key__\\">files</span>\\": [],
    \\"<span class=\\"__json-key__\\">analysis</span>\\": {
      \\"<span class=\\"__json-key__\\">boonai</span>\\": {
        \\"<span class=\\"__json-key__\\">tinyProxy</span>\\": [
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#f3dfc3\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#f4efd8\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#c18f46\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#ebdfbd\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#ccd3c0\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#e7d4bb\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#beae8e\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#cabf9e\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#d2c09c\\"</span>
        ]
      }
    },
    \\"<span class=\\"__json-key__\\">similarity</span>\\": {
      \\"<span class=\\"__json-key__\\">simhash</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"NMGPEKEACJCHEDDBCHFAPBAHNPPPKMPOPCMODAPNFPCPOPBNEPCPPBHPPCBPDBPJHBGPPPNKOMBHBPNPAHLFCPPPFPGBKPPFDPPHDFAADNKGADBGPFFFGKABGPDLFPPLPPNPPPAAJBPPPLDPKAMCKANPAGCBPBPCEPEAKMHEHPBLKIIFJPOPBPPMGONPPGPFDPCJNPPMPIPPPPHPPCBJPHPGJDNBMGBAPAEBCFDPLPPAJLKANAPPACCPPEAMPADJMCAIPIKNNPDAPMPPCAAOPBADBDJPHGEKFGIDBPHDPPAMPPHLBGPPPHPEPPNAPPPAHOPCLAKPPPFAAHCPFCFPAPBPILPADJAFMJDPCPMCKBBBFBGPLPJMEDDMHPGHMMJPPABAJCAGCFJFNJPBPEPCPCINFEHPHCCPLPGPOIPPMPNIPNDDELAPILCEAPPAIPPDPPBGEFPJLFPJPIECMAEPABALFGLPPLFDPGDABPLMJDPDGBHFPPBPPCPFDPPDFJPAPCDGGGPPGPCPPFIKCHPPPBPLJBPPJIPHLPPKGKDPBCCLNGMAPFHACDINFPPEPBHDLCPGPFPPKPDAJPBEPPPPGPIADNAPABCKHIKPBDLPBPHPLAPFPPDBBEPEHPPPPFBJFANJPMPCFHMDEPDPMNIBDPPAHDBPPNECHLJAIDJFPOLPPBHLABEHPGPPKBAKIPJPBOPPBPHCBIPPAOPIPBAJHBMPPCMADHMPMFKPDEDOPBBAGNNACAADPHDCEKPDPGKHPBFPGJLPPINPPPBPPEANCPPAPBKBFGPAIPEFPFDJGPHAPCPIJHLCBEPPMPPCFPNEPIAPAAEPDHFBMHCNACPFFFDPBLMPPHEMAAIJODGCGCHIGDMAPHDNFEFMHPLPPBAKFBPPAPFPCGJNEDBOBPCLNIIIAEFGAGPGIEAFNPCCCBPKIDIPAPPPPOBPFPADEPPDCECMBFJPAKOEHPBKPGEOBFLNPFAIPPCKPCPHPAIPLPPLEJFFIMICPAPMEPKDNBDOFPJEPCAJEJKEMLHCGENAPEPACPPNPCCLDINPHCDBPHADKIFEPCIPKJIOFOPDEPGEDEPPGPDMBJKPBEHBEPLPFNPJGPJPBPHJHGHPAAEKDIEEAEAGJFPCGLPELPILCAPCFPELIICCPCLPJHCADFIPIGCFLIKPGPJGDCALPBDJPPEGCPLJFGEPBHDPPBPPPIKGDEEDENMBLLIGNECBPEFPBMJKCGPDPJOCNDNLANPKAPPPGPLBBBAJIGEADBEJFFNEGPNKPPPBPGEAELPKLDEGAANIFCLBPPPPNDJGDAFEEACPNEPKKPPKGAHLPDPGPBKPFBDIDDAMPPAIHPHHAPAEGOPCPJEABPPPBAKPLABPCPHNPAEMDPPPPDAJANPPDMPEGFIDEEAAJLGPHPHPCLDPDPFIDCAPPPHIPPPPEDHJDBBPHFKBAOPPPFGEPJPLPCDPBAJCPPDPEFGBFECPIAOGHAPEPAMPNPCPBAPODHNDCIPAGPPPFCPPDMFCLCEHPHAEACACIPCDPPPOMLAKMPPBGDPLFDBMFAPCMIKPHFPPCPPDFPPBPPKPPPPPFECBFIPKKEIPPPPBCKPLEPDEPKCHEPCEJDEKABHBOPPAAPIKABKHBPHPGPDBPHAPJKEDBPBBPLCPFDEEKHEPDFNPGJPAPPOPCCCJPPKPAEDIFPADNADAPDPPEMFPMPPLMPIPIADLPPPFINEPBBBAFBKIFPDPPPEBNPFBEMPFCCEGHEJIMACOCCPHBJPPNKPIPACDPBJPFKPAPIDNPCIGGIPHJGPCKELBLAAPLBBHHHPPCBHPLFAPPJPEEPLHPGPFAOOPPFPJHILPDECMJACKHHAPANLPGALJBNAFODHMJCPPFPJICDPOJBGPKFFPGIJPOHPJAIEPBBKCBIIMIPFPPPAGDDHHHIGGKHFJPPPPEKBGHDCHDPAGEPPIPDPIKALNPHJBGIPPNFINIDPPPEPPCBPPLMFCLGGPDGGLKINGBGKEPHPBPBFHAOBGAHCDGNEBDDCGPDCP\\"</span>
    },
    \\"<span class=\\"__json-key__\\">labels</span>\\": [
      {
        \\"<span class=\\"__json-key__\\">label</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"Space\\"</span>,
        \\"<span class=\\"__json-key__\\">modelId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"621bf774-89d9-1244-9596-d6df43f1ede5\\"</span>,
        \\"<span class=\\"__json-key__\\">scope</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"TRAIN\\"</span>
      },
      {
        \\"<span class=\\"__json-key__\\">label</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"Outside\\"</span>,
        \\"<span class=\\"__json-key__\\">modelId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"621bf774-89d9-9596-1244-d6df43f1ede5\\"</span>,
        \\"<span class=\\"__json-key__\\">scope</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"TRAIN\\"</span>
      }
    ]
  },
  \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/\\"</span>
}</pre>",
        }
      }
      id="json-pretty"
    />
  </div>
</div>
`;

exports[`<TaskErrorAsset /> should render properly when asset has proxies 1`] = `
.emotion-0 {
  font-family: Roboto Mono;
  padding-bottom: 32px;
  height: auto;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4a4a4a;
  padding: 16px;
}

.emotion-2 {
  width: 48px;
  height: 48px;
  object-fit: cover;
}

.emotion-3 {
  padding-left: 24px;
}

.emotion-4 {
  background-color: #191919;
}

.emotion-4 pre {
  padding: 16px;
  margin: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <img
      alt="TIFF_1MB.tiff"
      className="emotion-2"
      src="https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg"
    />
    <div
      className="emotion-3"
    >
      TIFF_1MB.tiff
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre class=\\"__json-pretty__\\" style=\\"margin:0;line-height:1.3;overflow:auto;\\">{
  \\"<span class=\\"__json-key__\\">id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C\\"</span>,
  \\"<span class=\\"__json-key__\\">metadata</span>\\": {
    \\"<span class=\\"__json-key__\\">system</span>\\": {
      \\"<span class=\\"__json-key__\\">jobId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"106d4be1-5d95-11ea-baea-364023b135f5\\"</span>,
      \\"<span class=\\"__json-key__\\">dataSourceId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"10509c20-5d95-11ea-baea-364023b135f5\\"</span>,
      \\"<span class=\\"__json-key__\\">timeCreated</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:24.922700Z\\"</span>,
      \\"<span class=\\"__json-key__\\">state</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"Analyzed\\"</span>,
      \\"<span class=\\"__json-key__\\">projectId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"89382033-bcbb-4c8f-81a9-3d0883298a81\\"</span>,
      \\"<span class=\\"__json-key__\\">taskId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"106e0f32-5d95-11ea-baea-364023b135f5\\"</span>,
      \\"<span class=\\"__json-key__\\">timeModified</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:47.575195Z\\"</span>
    },
    \\"<span class=\\"__json-key__\\">custom</span>\\": {
      \\"<span class=\\"__json-key__\\">numbers</span>\\": [
        <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
        <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">2</span>,
        <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">3</span>
      ]
    },
    \\"<span class=\\"__json-key__\\">source</span>\\": {
      \\"<span class=\\"__json-key__\\">path</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"gs://zorroa-dev-data/image/TIFF_1MB.tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">extension</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">filename</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"TIFF_1MB.tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">mimetype</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image/tiff\\"</span>,
      \\"<span class=\\"__json-key__\\">filesize</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1131930</span>,
      \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1867533868</span>,
      \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/source/TIFF_1MB.tiff\\"</span>
    },
    \\"<span class=\\"__json-key__\\">metrics</span>\\": {
      \\"<span class=\\"__json-key__\\">pipeline</span>\\": [
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.core.processors.PreCacheSourceFileProcessor\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1621235190</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0.11</span>,
          \\"<span class=\\"__json-key__\\">executionDate</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:27.694149\\"</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.image.importers.ImageImporter\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1426657387</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0.26</span>,
          \\"<span class=\\"__json-key__\\">executionDate</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:28.215069\\"</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.office.importers.OfficeImporter\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">2001473853</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.video.VideoImporter\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">3310423168</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0</span>
        },
        {
          \\"<span class=\\"__json-key__\\">processor</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"boonai_core.core.processors.AssertAttributesProcessor\\"</span>,
          \\"<span class=\\"__json-key__\\">module</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"standard\\"</span>,
          \\"<span class=\\"__json-key__\\">checksum</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1841569083</span>,
          \\"<span class=\\"__json-key__\\">executionTime</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">0</span>,
          \\"<span class=\\"__json-key__\\">executionDate</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"2020-03-03T21:22:29.654215\\"</span>
        }
      ]
    },
    \\"<span class=\\"__json-key__\\">media</span>\\": {
      \\"<span class=\\"__json-key__\\">width</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">650</span>,
      \\"<span class=\\"__json-key__\\">height</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">434</span>,
      \\"<span class=\\"__json-key__\\">aspect</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1.5</span>,
      \\"<span class=\\"__json-key__\\">orientation</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"landscape\\"</span>,
      \\"<span class=\\"__json-key__\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image\\"</span>,
      \\"<span class=\\"__json-key__\\">length</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>
    },
    \\"<span class=\\"__json-key__\\">clip</span>\\": {
      \\"<span class=\\"__json-key__\\">type</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"page\\"</span>,
      \\"<span class=\\"__json-key__\\">start</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
      \\"<span class=\\"__json-key__\\">stop</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
      \\"<span class=\\"__json-key__\\">length</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1</span>,
      \\"<span class=\\"__json-key__\\">pile</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"pUn6wBxUN7x9JxOxLkvruOyNdYA\\"</span>,
      \\"<span class=\\"__json-key__\\">sourceAssetId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C\\"</span>
    },
    \\"<span class=\\"__json-key__\\">files</span>\\": [
      {
        \\"<span class=\\"__json-key__\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image_650x434.jpg\\"</span>,
        \\"<span class=\\"__json-key__\\">category</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"proxy\\"</span>,
        \\"<span class=\\"__json-key__\\">mimetype</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image/jpeg\\"</span>,
        \\"<span class=\\"__json-key__\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">89643</span>,
        \\"<span class=\\"__json-key__\\">attrs</span>\\": {
          \\"<span class=\\"__json-key__\\">width</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">650</span>,
          \\"<span class=\\"__json-key__\\">height</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">434</span>
        },
        \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg\\"</span>
      },
      {
        \\"<span class=\\"__json-key__\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image_512x341.jpg\\"</span>,
        \\"<span class=\\"__json-key__\\">category</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"proxy\\"</span>,
        \\"<span class=\\"__json-key__\\">mimetype</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image/jpeg\\"</span>,
        \\"<span class=\\"__json-key__\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">60713</span>,
        \\"<span class=\\"__json-key__\\">attrs</span>\\": {
          \\"<span class=\\"__json-key__\\">width</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">512</span>,
          \\"<span class=\\"__json-key__\\">height</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">341</span>
        },
        \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_512x341.jpg\\"</span>
      },
      {
        \\"<span class=\\"__json-key__\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image_320x213.jpg\\"</span>,
        \\"<span class=\\"__json-key__\\">category</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"proxy\\"</span>,
        \\"<span class=\\"__json-key__\\">mimetype</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"image/jpeg\\"</span>,
        \\"<span class=\\"__json-key__\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">30882</span>,
        \\"<span class=\\"__json-key__\\">attrs</span>\\": {
          \\"<span class=\\"__json-key__\\">width</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">320</span>,
          \\"<span class=\\"__json-key__\\">height</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">213</span>
        },
        \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_320x213.jpg\\"</span>
      },
      {
        \\"<span class=\\"__json-key__\\">size</span>\\": <span class=\\"__json-value__\\" style=\\"color:#0074f5;\\">1500</span>,
        \\"<span class=\\"__json-key__\\">name</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"dlp.dat\\"</span>,
        \\"<span class=\\"__json-key__\\">mimetype</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"application/octet-stream\\"</span>,
        \\"<span class=\\"__json-key__\\">id</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"assets/josv8dw1_3lw_eGb1rMCE2K0WG4zGstB/gcp/dlp.dat\\"</span>,
        \\"<span class=\\"__json-key__\\">category</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"gcp\\"</span>,
        \\"<span class=\\"__json-key__\\">attrs</span>\\": {}
      }
    ],
    \\"<span class=\\"__json-key__\\">analysis</span>\\": {
      \\"<span class=\\"__json-key__\\">boonai</span>\\": {
        \\"<span class=\\"__json-key__\\">tinyProxy</span>\\": [
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#f3dfc3\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#f4efd8\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#c18f46\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#ebdfbd\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#ccd3c0\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#e7d4bb\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#beae8e\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#cabf9e\\"</span>,
          <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"#d2c09c\\"</span>
        ]
      }
    },
    \\"<span class=\\"__json-key__\\">similarity</span>\\": {
      \\"<span class=\\"__json-key__\\">simhash</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"NMGPEKEACJCHEDDBCHFAPBAHNPPPKMPOPCMODAPNFPCPOPBNEPCPPBHPPCBPDBPJHBGPPPNKOMBHBPNPAHLFCPPPFPGBKPPFDPPHDFAADNKGADBGPFFFGKABGPDLFPPLPPNPPPAAJBPPPLDPKAMCKANPAGCBPBPCEPEAKMHEHPBLKIIFJPOPBPPMGONPPGPFDPCJNPPMPIPPPPHPPCBJPHPGJDNBMGBAPAEBCFDPLPPAJLKANAPPACCPPEAMPADJMCAIPIKNNPDAPMPPCAAOPBADBDJPHGEKFGIDBPHDPPAMPPHLBGPPPHPEPPNAPPPAHOPCLAKPPPFAAHCPFCFPAPBPILPADJAFMJDPCPMCKBBBFBGPLPJMEDDMHPGHMMJPPABAJCAGCFJFNJPBPEPCPCINFEHPHCCPLPGPOIPPMPNIPNDDELAPILCEAPPAIPPDPPBGEFPJLFPJPIECMAEPABALFGLPPLFDPGDABPLMJDPDGBHFPPBPPCPFDPPDFJPAPCDGGGPPGPCPPFIKCHPPPBPLJBPPJIPHLPPKGKDPBCCLNGMAPFHACDINFPPEPBHDLCPGPFPPKPDAJPBEPPPPGPIADNAPABCKHIKPBDLPBPHPLAPFPPDBBEPEHPPPPFBJFANJPMPCFHMDEPDPMNIBDPPAHDBPPNECHLJAIDJFPOLPPBHLABEHPGPPKBAKIPJPBOPPBPHCBIPPAOPIPBAJHBMPPCMADHMPMFKPDEDOPBBAGNNACAADPHDCEKPDPGKHPBFPGJLPPINPPPBPPEANCPPAPBKBFGPAIPEFPFDJGPHAPCPIJHLCBEPPMPPCFPNEPIAPAAEPDHFBMHCNACPFFFDPBLMPPHEMAAIJODGCGCHIGDMAPHDNFEFMHPLPPBAKFBPPAPFPCGJNEDBOBPCLNIIIAEFGAGPGIEAFNPCCCBPKIDIPAPPPPOBPFPADEPPDCECMBFJPAKOEHPBKPGEOBFLNPFAIPPCKPCPHPAIPLPPLEJFFIMICPAPMEPKDNBDOFPJEPCAJEJKEMLHCGENAPEPACPPNPCCLDINPHCDBPHADKIFEPCIPKJIOFOPDEPGEDEPPGPDMBJKPBEHBEPLPFNPJGPJPBPHJHGHPAAEKDIEEAEAGJFPCGLPELPILCAPCFPELIICCPCLPJHCADFIPIGCFLIKPGPJGDCALPBDJPPEGCPLJFGEPBHDPPBPPPIKGDEEDENMBLLIGNECBPEFPBMJKCGPDPJOCNDNLANPKAPPPGPLBBBAJIGEADBEJFFNEGPNKPPPBPGEAELPKLDEGAANIFCLBPPPPNDJGDAFEEACPNEPKKPPKGAHLPDPGPBKPFBDIDDAMPPAIHPHHAPAEGOPCPJEABPPPBAKPLABPCPHNPAEMDPPPPDAJANPPDMPEGFIDEEAAJLGPHPHPCLDPDPFIDCAPPPHIPPPPEDHJDBBPHFKBAOPPPFGEPJPLPCDPBAJCPPDPEFGBFECPIAOGHAPEPAMPNPCPBAPODHNDCIPAGPPPFCPPDMFCLCEHPHAEACACIPCDPPPOMLAKMPPBGDPLFDBMFAPCMIKPHFPPCPPDFPPBPPKPPPPPFECBFIPKKEIPPPPBCKPLEPDEPKCHEPCEJDEKABHBOPPAAPIKABKHBPHPGPDBPHAPJKEDBPBBPLCPFDEEKHEPDFNPGJPAPPOPCCCJPPKPAEDIFPADNADAPDPPEMFPMPPLMPIPIADLPPPFINEPBBBAFBKIFPDPPPEBNPFBEMPFCCEGHEJIMACOCCPHBJPPNKPIPACDPBJPFKPAPIDNPCIGGIPHJGPCKELBLAAPLBBHHHPPCBHPLFAPPJPEEPLHPGPFAOOPPFPJHILPDECMJACKHHAPANLPGALJBNAFODHMJCPPFPJICDPOJBGPKFFPGIJPOHPJAIEPBBKCBIIMIPFPPPAGDDHHHIGGKHFJPPPPEKBGHDCHDPAGEPPIPDPIKALNPHJBGIPPNFINIDPPPEPPCBPPLMFCLGGPDGGLKINGBGKEPHPBPBFHAOBGAHCDGNEBDDCGPDCP\\"</span>
    },
    \\"<span class=\\"__json-key__\\">labels</span>\\": [
      {
        \\"<span class=\\"__json-key__\\">label</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"Space\\"</span>,
        \\"<span class=\\"__json-key__\\">modelId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"621bf774-89d9-1244-9596-d6df43f1ede5\\"</span>,
        \\"<span class=\\"__json-key__\\">scope</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"TRAIN\\"</span>
      },
      {
        \\"<span class=\\"__json-key__\\">label</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"Outside\\"</span>,
        \\"<span class=\\"__json-key__\\">modelId</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"621bf774-89d9-9596-1244-d6df43f1ede5\\"</span>,
        \\"<span class=\\"__json-key__\\">scope</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"TRAIN\\"</span>
      }
    ]
  },
  \\"<span class=\\"__json-key__\\">url</span>\\": <span class=\\"__json-string__\\" style=\\"color:#009f22;\\">\\"https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/\\"</span>
}</pre>",
        }
      }
      id="json-pretty"
    />
  </div>
</div>
`;
